<resources>
    <string name="app_name">ProjectManager</string>
    <string name="app_name_readable">Project Manager</string>


    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up!</string>
    <string name="register">Register</string>
    <string name="confirm_password">Confirm Password</string>

    <!--Tab Names-->
    <string name="active">Active</string>
    <string name="complete">Complete</string>

    <!--Toast strings -->
    <string name="no_one_signed_in">No one is signed in!</string>
    <string name="logout_failed">Logout failed!</string>
    <string name="logged_out">Successfully logged out</string>
    <string name="retrieve_user_failed">Could not retrieve user from web</string>

    <!-- User Info String -->
    <string name="username">Username</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email_address">Email Address</string>
    <string name="user_role">User Role</string>
    <string name="password">Password</string>

    <!--Labels -->
    <string name="due_date">Due Date:</string>


    <string name="title_activity_pre_sign_in">PreSignInActivity</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="menu_logout">Log Out</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
