<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.SignInActivity">

    <TextView
            android:text="@string/app_name_readable"
            android:layout_width="0dp"
            android:layout_height="152dp"
            android:textColor="@color/colorPrimaryLight"
            android:id="@+id/titleTextView"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="24dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="24dp"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintVertical_bias="0.271"/>

    <android.support.design.widget.TextInputLayout
            android:id="@+id/til_username"
            android:hint="@string/username"
            android:textColorHint="@color/colorPrimary"
            app:hintAnimationEnabled="true"
            app:hintEnabled="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/titleTextView"
            android:layout_marginTop="@dimen/margin_vertical">

        <android.support.design.widget.TextInputEditText
                android:id="@+id/inputUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:singleLine="true"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:layout_marginTop="@dimen/margin_vertical"
            app:layout_constraintTop_toBottomOf="@id/til_username"
            android:id="@+id/textInputLayout"
            app:hintEnabled="true"
            app:hintAnimationEnabled="true"
            android:textColorHint="@color/colorPrimary"
            android:hint="@string/password"
            app:layout_constraintStart_toStartOf="@+id/til_username"
            app:layout_constraintEnd_toEndOf="@+id/til_username">

        <android.support.design.widget.TextInputEditText
                android:id="@+id/inputPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:inputType="textPassword"/>
    </android.support.design.widget.TextInputLayout>
    <Button
            android:text="@string/sign_in"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:id="@+id/signInButton"
            android:layout_marginTop="@dimen/margin_vertical"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
            app:layout_constraintEnd_toEndOf="@+id/textInputLayout"
            app:layout_constraintStart_toStartOf="@+id/textInputLayout"/>
    <Button
            android:text="@string/register"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/registerButton"
            android:layout_marginTop="@dimen/margin_vertical"
            app:layout_constraintTop_toBottomOf="@+id/signInButton"
            app:layout_constraintEnd_toEndOf="@+id/signInButton"
            app:layout_constraintStart_toStartOf="@+id/signInButton"/>



</android.support.constraint.ConstraintLayout>