<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.activity.RegisterActivity">

    <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:elevation="4dp"
            android:theme="@style/ThemeOverlay.MaterialComponents.Dark.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
            android:text="@string/sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_signUp"
            app:layout_constraintTop_toBottomOf="@+id/toolbar"
            app:layout_constraintEnd_toEndOf="parent"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
            android:textColor="@color/colorPrimaryLight"
            android:layout_marginTop="@dimen/margin_vertical"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"/>

    <android.support.design.widget.TextInputLayout
            android:id="@+id/inputLayout_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/colorPrimary"
            android:layout_marginTop="@dimen/margin_vertical"
            app:layout_constraintTop_toBottomOf="@+id/tv_signUp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="@dimen/margin_horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="@dimen/margin_horizontal">

        <android.support.design.widget.TextInputEditText
                android:id="@+id/inputUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username"/>
    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
            android:id="@+id/inputLayout_firstName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColorHint="@color/colorPrimary"
            android:layout_marginTop="@dimen/margin_vertical"
            app:layout_constraintTop_toBottomOf="@+id/inputLayout_username"
            app:layout_constraintStart_toStartOf="@+id/inputLayout_username"
            app:layout_constraintEnd_toEndOf="@+id/inputLayout_username">

        <android.support.design.widget.TextInputEditText
                android:id="@+id/inputFirstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/first_name"/>
    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
            android:id="@+id/inputLayout_lastName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColorHint="@color/colorPrimary"
            android:layout_marginTop="@dimen/margin_vertical"
            app:layout_constraintTop_toBottomOf="@+id/inputLayout_firstName"
            app:layout_constraintStart_toStartOf="@+id/inputLayout_firstName"
            app:layout_constraintEnd_toEndOf="@+id/inputLayout_firstName">

        <android.support.design.widget.TextInputEditText
                android:id="@+id/inputLastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/last_name"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
            android:id="@+id/inputLayout_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColorHint="@color/colorPrimary"
            android:layout_marginTop="@dimen/margin_vertical"
            app:layout_constraintTop_toBottomOf="@+id/inputLayout_lastName"
            app:layout_constraintStart_toStartOf="@+id/inputLayout_lastName"
            app:layout_constraintEnd_toEndOf="@+id/inputLayout_lastName">

        <android.support.design.widget.TextInputEditText
                android:id="@+id/inputEmail"
                android:inputType="textEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email_address"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
            android:id="@+id/inputLayout_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColorHint="@color/colorPrimary"
            android:layout_marginTop="@dimen/margin_vertical"
            app:layout_constraintTop_toBottomOf="@+id/inputLayout_email"
            app:layout_constraintStart_toStartOf="@+id/inputLayout_email"
            app:layout_constraintEnd_toEndOf="@+id/inputLayout_email">

        <android.support.design.widget.TextInputEditText
                android:id="@+id/inputPassword"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
            android:id="@+id/inputLayout_passwordConfirm"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColorHint="@color/colorPrimary"
            android:layout_marginTop="@dimen/margin_vertical"
            app:layout_constraintTop_toBottomOf="@+id/inputLayout_password"
            app:layout_constraintStart_toStartOf="@+id/inputLayout_password"
            app:layout_constraintEnd_toEndOf="@+id/inputLayout_password">

        <android.support.design.widget.TextInputEditText
                android:id="@+id/inputPasswordConfirm"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/confirm_password"/>
    </android.support.design.widget.TextInputLayout>
    <Button
            android:text="@string/register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/registerButton"
            style="@style/Widget.AppCompat.Button.Colored"
            app:layout_constraintEnd_toEndOf="@+id/inputLayout_passwordConfirm"
            app:layout_constraintStart_toStartOf="@+id/inputLayout_passwordConfirm"
            android:layout_marginTop="@dimen/margin_vertical"
            app:layout_constraintTop_toBottomOf="@+id/inputLayout_passwordConfirm"/>


</android.support.constraint.ConstraintLayout>